Revove MaxPermSize